2006-09-19  Andreas Kupries <andreask@activestate.com>

	* support/devel/sak/test/run.tcl: Extended testsuite logging.
	* support/devel/sak/test/help.txt: Standard user feedback and
	  extended information (raw log, summaries) are written to a set
	  of files. All required information in one run, instead of two.

2006-09-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl: Accepted patch by Michael Schlenker
	  <mic42@users.sourceforge.net> for [Tcllib SF Bug 1559489] to
	  divert error messages to a dialog box instead of stderr where
	  possible, to avoid them being silently swallowed by windows.

	* support/devel/sak/test/run.tcl: Reworked output generated
	* support/devel/all.tcl: by testsuites, added processing of
	  the modified output for progress reporting, condensed reporting,
	  and in preparation of placing results into a database.
	* support/devel/sak/test/help.txt: Updated documentation.
	* support/devel/sak/test/shell.tcl: Fixed typo in name of method
	  to call to remove shells from the database.

2006-09-06  Andreas Kupries <andreask@activestate.com>

	* Makefile.in (test): Updated the target to the new syntax
	  for running testsuites accepted by sak.

2006-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/test/help.txt: Added reference to the file
	  used to store the list of registered shells.

	* support/devel/all.tcl: Changed to terminate with 'exit' instead
	  of 'return', to allow the testsuites to be driven by a 'wish'
	  without having to deal with its event loop.

	* support/devel/sak/test/cmd.tcl: Replaced the existing
	* support/devel/sak/test/help.txt: implementation of 'test' with a
	  dispatcher to an extensible set of packages. See below.

	* support/devel/sak/test/pkgIndex.tcl: New implementation of the
	* support/devel/sak/test/run.tcl: 'test' command and its sub-
	* support/devel/sak/test/shell.tcl: commands. The 'registry', see