@@ -7,8 +7,9 @@
         running SAK for the testsuites as well. If no modules are
         specified the testsuites of all modules are run.
 
-        If --valgrind is specified the testsuites are run under
-        the valgrind memory checker.
+        If --valgrind is specified the testsuites are run under the
+        valgrind memory checker. NOTE. This feature is not available
+        on the windows platform. Requests for it will be ignored.
 
         If one or more --shell's are specified the testsuites are run
         against them. If none are specified the shells registered with
